Intégration Filtres du P2

--- a/Reservia.html
+++ b/Reservia.html
@@ -35,6 +35,17 @@
             </p>
         </form>
     </header>
+    <ul class="Filtres"><!--Mettre margin 10px à gauche pour aligner vertical-->
+        <li class="filtres">Filtres</li>
+        <li class="eco"><i class="fas fa-money-bill-wave"></i>Economique</li>
+        <li class="eco"><i class="fas fa-child"></i>Familial</li>
+        <li class="eco"><i class="fas fa-heart"></i>Romantique</li>
+        <li class="eco"><i class="fas fa-dog"></i>Animaux autorisés</li>
+    </ul>
+    <div class="Information"><!--margin pour espacement-->
+        <i class="fas fa-info-circle"></i>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+    </div>
     
 </body>
 </html>
