Modif. effet filtres + Ajout photos Hébergements

--- a/Reservia.html
+++ b/Reservia.html
@@ -37,15 +37,124 @@
     </header>
     <ul class="Filtres"><!--Mettre margin 10px à gauche pour aligner vertical-->
         <li class="filtres">Filtres</li>
-        <li class="eco"><i class="fas fa-money-bill-wave"></i>Economique</li>
-        <li class="eco"><i class="fas fa-child"></i>Familial</li>
-        <li class="eco"><i class="fas fa-heart"></i>Romantique</li>
-        <li class="eco"><i class="fas fa-dog"></i>Animaux autorisés</li>
+        <li><i class="fas fa-money-bill-wave"></i>Economique</li>
+        <li><i class="fas fa-child"></i>Familial</li>
+        <li><i class="fas fa-heart"></i>Romantique</li>
+        <li><i class="fas fa-dog"></i>Animaux autorisés</li>
     </ul>
     <div class="Information"><!--margin pour espacement-->
         <i class="fas fa-info-circle"></i>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
+    <!--insérer une margin top/right/left // Ps: Ancres de section (Titre) cf Menu-->
+    <section class="Hebergements">
+        <div><h2>Hébergements à Marseille</h2></div>
+        <div class="Contenu1">
+            <article>
+                <figure>
+                    <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo de chambre Hebergement à la Cannebière"/>
+                </figure>
+                <section class="description">
+                    <h3>Auberge la Cannebière</h3>
+                    <p>Nuit à partir de <strong>25€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="Public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port"/>
+                </figure>
+                <section class="description">
+                    <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de <strong>52€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="Public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes"/>
+                </figure>
+                <section class="description">
+                    <h3>Hôtel les mouettes</h3>
+                    <p>Nuit à partir de <strong>76€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="Public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer"/>
+                </figure>
+                <section class="description">
+                    <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de <strong>46€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="Public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier"/>
+                </figure>
+                <section class="description">
+                    <h3>Auberge le Panier</h3>
+                    <p>Nuit à partir de <strong>23€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img class="amina"src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
+                </figure>
+                <section class="description">
+                    <h3>Hôtel chez Amina</h3>
+                    <p>Nuit à partir de <strong>96€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+        </div>
+        <div class="Supplement">Afficher plus</div>
+    </section>
+
     
 </body>
 </html>
