--- a/Reservia.html
+++ b/Reservia.html
@@ -73,13 +73,13 @@
                 </figure>
                 <section class="description">
                     <h3>Hôtel du port</h3>
-                    <p>Nuit à partir de <strong>52€</strong></p>
+                    <p>Nuit à partir de 52<strong>€</strong></p>
                     <p>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
-                        <i class="fas fa-star deux"></i>
+                        <i class="fas fa-star un"></i>
                     </p>
                 </section>
             </article>
@@ -90,7 +90,7 @@
                 </figure>
                 <section class="description">
                     <h3>Hôtel les mouettes</h3>
-                    <p>Nuit à partir de <strong>76€</strong></p>
+                    <p>Nuit à partir de 76<strong>€</strong></p>
                     <p>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
@@ -107,12 +107,12 @@
                 </figure>
                 <section class="description">
                     <h3>Hôtel de la mer</h3>
-                    <p>Nuit à partir de <strong>46€</strong></p>
+                    <p>Nuit à partir de 46<strong>€</strong></p>
                     <p>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
-                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
                         <i class="fas fa-star deux"></i>
                     </p>
                 </section>
@@ -137,11 +137,70 @@
 
             <article>
                 <figure>
-                    <img class="amina"src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
+                    <img src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
                 </figure>
                 <section class="description">
                     <h3>Hôtel chez Amina</h3>
-                    <p>Nuit à partir de <strong>96€</strong></p>
+                    <p>Nuit à partir de 96<strong>€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                    </p>
+                </section>
+            </article>
+        </div>
+        <div class="Supplement">Afficher plus</div>
+    </section>
+    <section class="Populaires">
+        <div class="Titre">
+            <h2>Les plus populaires</h2>
+            <i class="fas fa-chart-line"></i>
+        </div>
+        <div class="Contenu2">
+            <article>
+                <figure>
+                    <img src="Public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin"/>
+                </figure>
+                <section class="description2">
+                    <h3>Hôtel le soleil du matin</h3>
+                    <p>Nuit à partir de 128<strong>€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="Public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambre d'hôte Au coeur de l'eau"/>
+                </figure>
+                <section class="description2">
+                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                    <p>Nuit à partir de 71<strong>€</strong></p>
+                    <p>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star un"></i>
+                        <i class="fas fa-star deux"></i>
+                    </p>
+                </section>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="Public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
+                </figure>
+                <section class="description2">
+                    <h3>Hôtel Tout bleu et Blanc</h3>
+                    <p>Nuit à partir de 68<strong>€</strong></p>
                     <p>
                         <i class="fas fa-star un"></i>
                         <i class="fas fa-star un"></i>
@@ -152,7 +211,6 @@
                 </section>
             </article>
         </div>
-        <div class="Supplement">Afficher plus</div>
     </section>
 
     
