--- a/Reservia.html
+++ b/Reservia.html
@@ -54,7 +54,7 @@
             <div class="Contenu1">
                 <article>
                     <figure>
-                        <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo de chambre Hebergement à la Cannebière"/>
+                        <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre Auberge à la Cannebière"/>
                     </figure>
                     <section class="description">
                         <h3>Auberge la Cannebière</h3>
@@ -221,7 +221,7 @@
 
             <article class="Port">
                 <figure>
-                    <img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port"/>
+                    <a href=""><img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port"/></a>
                 </figure>
                 <section>
                     <h3>Vieux Port</h3>
@@ -230,7 +230,7 @@
             <div>
                 <article class="Pomègues">
                     <figure>
-                        <img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues"/>
+                        <a href=""><img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues"/></a>
                     </figure>
                     <section>
                         <h3>Fort de Pomègues</h3>
@@ -238,7 +238,7 @@
                 </article>
                 <article class="Frioul">
                     <figure>
-                        <img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioum"/>
+                        <a href=""><img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioum"/></a>
                     </figure>
                     <section>
                         <h3>Iles du Frioul</h3>
@@ -248,7 +248,7 @@
 
             <article class="Calanques">
                 <figure>
-                    <img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"  alt="photo du Parc National des Calanques"/>
+                    <a href=""><img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques"/></a>
                 </figure>
                 <section>
                     <h3>Parc National des Calanques</h3>
@@ -258,7 +258,7 @@
             <div>
                 <article class="NotreDame">
                     <figure>
-                        <img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde"/>
+                        <a href=""><img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde"/></a>
                     </figure>
                     <section>
                         <h3>Notre-Dame-de-la-Garde</h3>
@@ -266,7 +266,7 @@
                 </article>
                 <article class="Longchamp">
                     <figure>
-                        <img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp"/>
+                        <a href=""><img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp"/></a>
                     </figure>
                     <section>
                         <h3>Parc Longchamp</h3>
