--- a/Reservia.html
+++ b/Reservia.html
@@ -35,15 +35,14 @@
             </p>
         </form>
     </header>
-    <div class="Filtres"><!--Mettre margin 1.5em à gauche-->
-        <ul>
-            <li class="filtres">Filtres</li>
-            <li><i class="fas fa-money-bill-wave"></i><a href="">Economique</a></li>
-            <li><i class="fas fa-child"></i><a href="">Familial</a></li>
-            <li><i class="fas fa-heart"></i><a href="">Romantique</a></li>
-            <li><i class="fas fa-dog"></i><a href="">Animaux autorisés</a></li>
-        </ul>
-    </div>
+    <ul class="Filtres"><!--Mettre margin 1.5em à gauche-->
+        <li class="filtres">Filtres</li>
+        <li><i class="fas fa-money-bill-wave"></i><a href="">Economique</a></li>
+        <li><i class="fas fa-child"></i><a href="">Familial</a></li>
+        <li><i class="fas fa-heart"></i><a href="">Romantique</a></li>
+        <li><i class="fas fa-dog"></i><a href="">Animaux autorisés</a></li>
+    </ul>
+    
     <div class="Information"><!--margin pour espacement-->
         <i class="fas fa-info-circle"></i>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
