Modification Media Queries // P2 fini

--- a/Reservia.html
+++ b/Reservia.html
@@ -15,8 +15,8 @@
                 <img src="Public/img/logo.png" alt="logo Reservia"/>
             </div>
             <ul class="Ancres">
-                <li><a href="#Hébergements à Marseille">Hébergements</a></li>
-                <li><a href="#Activités à Marseille">Activités</a></li>
+                <li><a href="#HébergementsàMarseille">Hébergements</a></li>
+                <li><a href="#ActivitésàMarseille">Activités</a></li>
             </ul>
             <div class="Inscrire">
                 <div><a href="inscrire">S'inscrire</a></div>
@@ -50,7 +50,7 @@
     <main>
         <div class="MainContent"><!--Pour rapprocher les section hebergements + populaires-->
             <section class="Hebergements"><!--insérer une margin top/right/left // Ps: Ancres de section (Titre) cf Menu-->
-                <div><h2 id="Hébergements à Marseille">Hébergements à Marseille</h2></div>
+                <div><h2 id="HébergementsàMarseille">Hébergements à Marseille</h2></div>
                 <div class="Contenu1">
                     <article>
                         <figure>
@@ -216,7 +216,7 @@
             </section>
         </div>
         <section class="Activités">
-            <div><h2 id="Activités à Marseille">Activités à Marseille</h2></div>
+            <div><h2 id="ActivitésàMarseille">Activités à Marseille</h2></div>
             <div class="Contenu3">
                 <article class="Port">
                     <figure>
