Autres Modif Media Queries + Modif car warning W3C

--- a/Reservia.html
+++ b/Reservia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Public/css/style.css"/>
     <link rel="stylesheet" href="Public/fontawesome-free-5.15.1-web/css/all.min.css">
-    <link href = "https://fonts.googleapis.com/css2? family = Raleway & display = swap" rel = "feuille de style ">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="feuille de style">
     <title>Reservia</title>
 </head>
 <body>
@@ -54,7 +54,7 @@
                 <div class="Contenu1">
                     <article>
                         <figure>
-                            <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre Auberge à la Cannebière"/>
+                            <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Chambre Auberge à la Cannebière" title="Hébergement à La Cannebière"/>
                         </figure>
                         <section class="description">
                             <h3>Auberge la Cannebière</h3>
@@ -71,7 +71,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port"/>
+                            <img src="Public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port" title="Hôtel du Port"/>
                         </figure>
                         <section class="description">
                             <h3>Hôtel du port</h3>
@@ -88,7 +88,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes"/>
+                            <img src="Public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes" title="Hôtel les mouettes"/>
                         </figure>
                         <section class="description">
                             <h3>Hôtel les mouettes</h3>
@@ -105,7 +105,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer"/>
+                            <img src="Public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer" title="Hôtel de la mer"/>
                         </figure>
                         <section class="description">
                             <h3>Hôtel de la mer</h3>
@@ -122,7 +122,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier"/>
+                            <img src="Public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier" title="Auberge le Panier"/>
                         </figure>
                         <section class="description">
                             <h3>Auberge le Panier</h3>
@@ -139,7 +139,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
+                            <img src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina" title="Hôtel chez Amina"/>
                         </figure>
                         <section class="description">
                             <h3>Hôtel chez Amina</h3>
@@ -164,7 +164,7 @@
                 <div class="Contenu2">
                     <article>
                         <figure>
-                            <img src="Public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin"/>
+                            <img src="Public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin" title="Hôtel le soleil du matin"/>
                         </figure>
                         <section class="description2">
                             <h3>Hôtel le soleil du matin</h3>
@@ -181,7 +181,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambres d'hôtes Au coeur de l'eau"/>
+                            <img src="Public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambres d'hôtes Au coeur de l'eau" title="Hôtes au coeur de l'eau"/>
                         </figure>
                         <section class="description2">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -198,7 +198,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
+                            <img src="Public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc" title="Hôtel Tout bleu et Blanc"/>
                         </figure>
                         <section class="description2">
                             <h3>Hôtel Tout bleu et Blanc</h3>
@@ -220,7 +220,7 @@
             <div class="Contenu3">
                 <article class="Port">
                     <figure>
-                        <a href=""><img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port"/></a>
+                        <a href=""><img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port" title="Activités du Vieux Port"/></a>
                     </figure>
                     <section>
                         <h3>Vieux Port</h3>
@@ -229,7 +229,7 @@
                 <div>
                     <article class="Pomègues">
                         <figure>
-                            <a href=""><img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues"/></a>
+                            <a href=""><img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues" title="Activités du Fort de Pomègues"/></a>
                         </figure>
                         <section>
                             <h3>Fort de Pomègues</h3>
@@ -238,7 +238,7 @@
 
                     <article class="Frioul">
                         <figure>
-                            <a href=""><img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioum"/></a>
+                            <a href=""><img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioul" title="Activités Iles du Frioul"/></a>
                         </figure>
                         <section>
                             <h3>Iles du Frioul</h3>
@@ -248,7 +248,7 @@
 
                 <article class="Calanques">
                     <figure>
-                        <a href=""><img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques"/></a>
+                        <a href=""><img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques" title="Activités au Parc des Calanques"/></a>
                     </figure>
                     <section>
                         <h3>Parc National des Calanques</h3>
@@ -258,7 +258,7 @@
                 <div>
                     <article class="NotreDame">
                         <figure>
-                            <a href=""><img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde"/></a>
+                            <a href=""><img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde" title="Activités Notre Dame"/></a>
                         </figure>
                         <section>
                             <h3>Notre-Dame-de-la-Garde</h3>
@@ -267,7 +267,7 @@
 
                     <article class="Longchamp">
                         <figure>
-                            <a href=""><img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp"/></a>
+                            <a href=""><img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp" title="Activités Parc Longchamp"/></a>
                         </figure>
                         <section>
                             <h3>Parc Longchamp</h3>
