Modif. Media Queries + Ajustement effectué "Menu"

--- a/Reservia.html
+++ b/Reservia.html
@@ -19,7 +19,7 @@
                 <li><a href="#ActivitésàMarseille">Activités</a></li>
             </ul>
             <div class="Inscrire">
-                <div><a href="inscrire">S'inscrire</a></div>
+                <li><a href="inscrire">S'inscrire</a></li>
             </div>
         </nav>
         <div class="Introduction">
@@ -54,8 +54,9 @@
                 <div class="Contenu1">
                     <article>
                         <figure>
-                            <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Chambre Auberge à la Cannebière" title="Hébergement à La Cannebière"/>
+                            <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Chambre Auberge à la Cannebière"/>
                         </figure>
+                        <h3 hidden>Auberge la Cannebière</h3>
                         <section class="description">
                             <h3>Auberge la Cannebière</h3>
                             <p>Nuit à partir de <strong>25€</strong></p>
@@ -71,8 +72,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port" title="Hôtel du Port"/>
+                            <img src="Public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port"/>
                         </figure>
+                        <h3 hidden>Hôtel du port</h3>
                         <section class="description">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52<strong>€</strong></p>
@@ -88,8 +90,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes" title="Hôtel les mouettes"/>
+                            <img src="Public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes"/>
                         </figure>
+                        <h3 hidden>Hôtel les mouettes</h3>
                         <section class="description">
                             <h3>Hôtel les mouettes</h3>
                             <p>Nuit à partir de 76<strong>€</strong></p>
@@ -105,8 +108,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer" title="Hôtel de la mer"/>
+                            <img src="Public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer"/>
                         </figure>
+                        <h3 hidden>Hôtel de la mer</h3>
                         <section class="description">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de 46<strong>€</strong></p>
@@ -122,8 +126,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier" title="Auberge le Panier"/>
+                            <img src="Public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier"/>
                         </figure>
+                        <h3 hidden>Auberge le Panier</h3>
                         <section class="description">
                             <h3>Auberge le Panier</h3>
                             <p>Nuit à partir de <strong>23€</strong></p>
@@ -139,8 +144,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina" title="Hôtel chez Amina"/>
+                            <img src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
                         </figure>
+                        <h3 hidden>Hôtel chez Amina</h3>
                         <section class="description">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 96<strong>€</strong></p>
@@ -164,8 +170,9 @@
                 <div class="Contenu2">
                     <article>
                         <figure>
-                            <img src="Public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin" title="Hôtel le soleil du matin"/>
+                            <img src="Public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin"/>
                         </figure>
+                        <h3 hidden>Hôtel le soleil du matin</h3>
                         <section class="description2">
                             <h3>Hôtel le soleil du matin</h3>
                             <p>Nuit à partir de 128<strong>€</strong></p>
@@ -181,8 +188,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambres d'hôtes Au coeur de l'eau" title="Hôtes au coeur de l'eau"/>
+                            <img src="Public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambres d'hôtes Au coeur de l'eau"/>
                         </figure>
+                        <h3 hidden>Au coeur de l'eau Chambres d'hôtes</h3>
                         <section class="description2">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71<strong>€</strong></p>
@@ -198,8 +206,9 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc" title="Hôtel Tout bleu et Blanc"/>
+                            <img src="Public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
                         </figure>
+                        <h3 hidden>Hôtel Tout bleu et Blanc</h3>
                         <section class="description2">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68<strong>€</strong></p>
@@ -220,21 +229,21 @@
             <div class="Contenu3">
                 <article class="Port">
                     <figure>
-                        <a href=""><img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port" title="Activités du Vieux Port"/></a>
+                        <a href=""><img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port"/></a>
                     </figure>
                     <h3>Vieux Port</h3>
                 </article>
                 <div>
                     <article class="Pomègues">
                         <figure>
-                            <a href=""><img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues" title="Activités du Fort de Pomègues"/></a>
+                            <a href=""><img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues"/></a>
                         </figure>
                         <h3>Fort de Pomègues</h3>
                     </article>
 
                     <article class="Frioul">
                         <figure>
-                            <a href=""><img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioul" title="Activités Iles du Frioul"/></a>
+                            <a href=""><img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioul"/></a>
                         </figure>
                         <h3>Iles du Frioul</h3>
                     </article>
@@ -242,7 +251,7 @@
 
                 <article class="Calanques">
                     <figure>
-                        <a href=""><img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques" title="Activités au Parc des Calanques"/></a>
+                        <a href=""><img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques"/></a>
                     </figure>
                     <h3>Parc National des Calanques</h3>
                 </article>
@@ -250,14 +259,14 @@
                 <div>
                     <article class="NotreDame">
                         <figure>
-                            <a href=""><img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde" title="Activités Notre Dame"/></a>
+                            <a href=""><img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde"/></a>
                         </figure>
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </article>
 
                     <article class="Longchamp">
                         <figure>
-                            <a href=""><img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp" title="Activités Parc Longchamp"/></a>
+                            <a href=""><img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp"/></a>
                         </figure>
                         <h3>Parc Longchamp</h3>
                     </article>
