--- a/Reservia.html
+++ b/Reservia.html
@@ -19,7 +19,7 @@
                 <li><a href="#ActivitésàMarseille">Activités</a></li>
             </ul>
             <div class="Inscrire">
-                <li><a href="inscrire">S'inscrire</a></li>
+                <a href="inscrire">S'inscrire</a>
             </div>
         </nav>
         <div class="Introduction">
@@ -35,14 +35,15 @@
             </p>
         </form>
     </header>
-    <ul class="Filtres"><!--Mettre margin 1.5em à gauche-->
-        <li class="filtres">Filtres</li>
-        <li><i class="fas fa-money-bill-wave"></i><a href="">Economique</a></li>
-        <li><i class="fas fa-child"></i><a href="">Familial</a></li>
-        <li><i class="fas fa-heart"></i><a href="">Romantique</a></li>
-        <li><i class="fas fa-dog"></i><a href="">Animaux autorisés</a></li>
-    </ul>
-    
+    <div>
+        <ul class="Filtres"><!--Mettre margin 1.5em à gauche-->
+            <li class="filtres">Filtres</li>
+            <li><i class="fas fa-money-bill-wave"></i><a href="">Economique</a></li>
+            <li><i class="fas fa-child"></i><a href="">Familial</a></li>
+            <li><i class="fas fa-heart"></i><a href="">Romantique</a></li>
+            <li><i class="fas fa-dog"></i><a href="">Animaux autorisés</a></li>
+        </ul>
+    </div>    
     <div class="Information"><!--margin pour espacement-->
         <i class="fas fa-info-circle"></i>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
