--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Public/css/style.css"/>
-    <link rel="stylesheet" href="Public/fontawesome-free-5.15.1-web/css/all.min.css">
+    <link rel="stylesheet" href="public/css/style.css"/>
+    <link rel="stylesheet" href="public/fontawesome-free-5.15.1-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="feuille de style">
     <title>Reservia</title>
 </head>
@@ -12,7 +12,7 @@
     <header><!--Ps:margin 1.5em haut / droit /gauche-->
         <nav class="Menu"><!--ancres section + effet bordure:hover + effet:active-->
             <div class="logo">
-                <img src="Public/img/logo.png" alt="logo Reservia"/>
+                <img src="public/img/logo.png" alt="logo Reservia"/>
             </div>
             <ul class="Ancres">
                 <li><a href="#HébergementsàMarseille">Hébergements</a></li>
@@ -55,7 +55,7 @@
                 <div class="Contenu1">
                     <article>
                         <figure>
-                            <img src="Public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Chambre Auberge à la Cannebière"/>
+                            <img src="public/img/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo Chambre Auberge à la Cannebière"/>
                         </figure>
                         <h3 hidden>Auberge la Cannebière</h3>
                         <section class="description">
@@ -73,7 +73,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port"/>
+                            <img src="public/img/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo de chambre Hôtel du port"/>
                         </figure>
                         <h3 hidden>Hôtel du port</h3>
                         <section class="description">
@@ -91,7 +91,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes"/>
+                            <img src="public/img/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo de chambre Hebergement Hôtel les mouettes"/>
                         </figure>
                         <h3 hidden>Hôtel les mouettes</h3>
                         <section class="description">
@@ -109,7 +109,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer"/>
+                            <img src="public/img/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo de chambre Hebergement Hôtel de la mer"/>
                         </figure>
                         <h3 hidden>Hôtel de la mer</h3>
                         <section class="description">
@@ -127,7 +127,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier"/>
+                            <img src="public/img/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre Hebergement Auberge le Panier"/>
                         </figure>
                         <h3 hidden>Auberge le Panier</h3>
                         <section class="description">
@@ -145,7 +145,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
+                            <img src="public/img/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre Hebergement Hôtel chez Amina"/>
                         </figure>
                         <h3 hidden>Hôtel chez Amina</h3>
                         <section class="description">
@@ -171,7 +171,7 @@
                 <div class="Contenu2">
                     <article>
                         <figure>
-                            <img src="Public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin"/>
+                            <img src="public/img/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo chambre Hôtel le soleil du matin"/>
                         </figure>
                         <h3 hidden>Hôtel le soleil du matin</h3>
                         <section class="description2">
@@ -189,7 +189,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambres d'hôtes Au coeur de l'eau"/>
+                            <img src="public/img/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo chambres d'hôtes Au coeur de l'eau"/>
                         </figure>
                         <h3 hidden>Au coeur de l'eau Chambres d'hôtes</h3>
                         <section class="description2">
@@ -207,7 +207,7 @@
 
                     <article>
                         <figure>
-                            <img src="Public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
+                            <img src="public/img/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
                         </figure>
                         <h3 hidden>Hôtel Tout bleu et Blanc</h3>
                         <section class="description2">
@@ -230,21 +230,21 @@
             <div class="Contenu3">
                 <article class="Port">
                     <figure>
-                        <a href=""><img src="Public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port"/></a>
+                        <a href=""><img src="public/img/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="Photo du Vieux Port"/></a>
                     </figure>
                     <h3>Vieux Port</h3>
                 </article>
                 <div>
                     <article class="Pomègues">
                         <figure>
-                            <a href=""><img src="Public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues"/></a>
+                            <a href=""><img src="public/img/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt=" photo du Fort de Pomègues"/></a>
                         </figure>
                         <h3>Fort de Pomègues</h3>
                     </article>
 
                     <article class="Frioul">
                         <figure>
-                            <a href=""><img src="Public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioul"/></a>
+                            <a href=""><img src="public/img/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo des îles du frioul"/></a>
                         </figure>
                         <h3>Iles du Frioul</h3>
                     </article>
@@ -252,7 +252,7 @@
 
                 <article class="Calanques">
                     <figure>
-                        <a href=""><img src="Public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques"/></a>
+                        <a href=""><img src="public/img/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo des Calanques"/></a>
                     </figure>
                     <h3>Parc National des Calanques</h3>
                 </article>
@@ -260,14 +260,14 @@
                 <div>
                     <article class="NotreDame">
                         <figure>
-                            <a href=""><img src="Public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde"/></a>
+                            <a href=""><img src="public/img/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo de Notre-Dame-de-la-Garde"/></a>
                         </figure>
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </article>
 
                     <article class="Longchamp">
                         <figure>
-                            <a href=""><img src="Public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp"/></a>
+                            <a href=""><img src="public/img/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo du Parc Longchamp"/></a>
                         </figure>
                         <h3>Parc Longchamp</h3>
                     </article>
