--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Public/css/style.css"/>
     <link rel="stylesheet" href="Public/fontawesome-free-5.15.1-web/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="feuille de style">
     <title>Reservia</title>
 </head>
